Adição de parágrafo
mais um lorem

--- a/Site_exemplo/Index.html
+++ b/Site_exemplo/Index.html
@@ -13,5 +13,6 @@
   Facere voluptatum doloremque aut! Minus molestiae quo doloribus
   ipsum odio beatae sit, recusandae, tempora, ut quod voluptates nisi voluptate
   aperiam eveniet ducimus!</p>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, ratione fugiat quae quis cupiditate ipsam temporibus minus deserunt corrupti atque, ipsa iste maxime totam laboriosam nisi autem exercitationem rem sapiente.</p>
 </body>
 </html>
